--- a/index.html
+++ b/index.html
@@ -6,9 +6,30 @@
     <title>Assignment-02</title>
     <link rel="stylesheet" href="styles/design.css">
 </head>
-<body>
-    <header>
-
+<body class="inter-font">
+    <header class="header">
+        <nav class="navbar display-flex">
+            <h3 class="fitness reddish">Fitness</h3>
+            <ul class="nav-links display-flex">
+                <li class="nav-item"><a class="nav-link common-white" href=""><button class="btn-nav">Home</button></a></li>
+                <li class="nav-item"><a class="nav-link common-white" href="">Service</a></li>
+                <li class="nav-item"><a class="nav-link common-white" href="">Contact</a></li>
+                <li class="nav-item"><a class="nav-link common-white" href="">About</a></li>
+            </ul>
+        </nav>
+        <div class="banner display-flex">
+            <div class="banner-content">
+                <h1 class="heading common-white">Get body in <span>shape</span> & stay 
+                    healthy</h1>
+                <p>A huge selection of health and fitness content, healthy recipes 
+                    and transformation stories to help you get fit and stay fit!</p>
+                <div>
+                    <button class="btn-primary">Join Club Now!</button>
+                    <button class="btn-download">Download App</button>
+                </div>
+            </div>
+            <img src="images/Images 2.png" alt="">
+        </div>
     </header>
     <main>
 
