--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     healthy</h1>
                 <p>A huge selection of health and fitness content, healthy recipes 
                     and transformation stories to help you get fit and stay fit!</p>
-                <div>
+                <div class="banner-button display-flex">
                     <button class="btn-primary">Join Club Now!</button>
                     <button class="btn-download">Download App</button>
                 </div>
