made changes section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,40 @@
         </div>
     </header>
     <main>
-
+        <section class="changes">
+            <div class="texting">
+                <h2 class="Change-heading">Change Your Habits</h2>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or 
+                    access to a gym.
+                </p>
+            </div>
+            <div class="cards">
+                <div class="card-style">
+                    <img src="images/image 3.png" alt="">
+                    <h6>Movement</h6>
+                    <p>We believe fitness should be 
+                        accessible to everyone</p>
+                </div>
+                <div class="card-style">
+                    <img src="images/image 2.png" alt="">
+                    <h6>Time</h6>
+                    <p>We believe fitness should be 
+                        accessible to everyone</p>
+                </div>
+                <div class="card-style">
+                    <img src="images/image 4.png" alt="">
+                    <h6>Practice</h6>
+                    <p>We believe fitness should be 
+                        accessible to everyone</p>
+                </div>
+                <div class="card-style">
+                    <img src="images/image 5.png" alt="">
+                    <h6>Weight Loss</h6>
+                    <p>We believe fitness should be 
+                        accessible to everyone</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
