--- a/index.html
+++ b/index.html
@@ -8,28 +8,30 @@
 </head>
 <body class="inter-font">
     <header class="header">
-        <nav class="navbar display-flex">
-            <h3 class="fitness reddish">Fitness</h3>
-            <ul class="nav-links display-flex">
-                <li class="nav-item"><a class="nav-link common-white" href=""><button class="btn-nav">Home</button></a></li>
-                <li class="nav-item"><a class="nav-link common-white" href="">Service</a></li>
-                <li class="nav-item"><a class="nav-link common-white" href="">Contact</a></li>
-                <li class="nav-item"><a class="nav-link common-white" href="">About</a></li>
-            </ul>
-        </nav>
-        <div class="banner display-flex">
-            <div class="banner-content">
-                <h1 class="heading common-white">Get body in <span>shape</span> & stay 
-                    healthy</h1>
-                <p>A huge selection of health and fitness content, healthy recipes 
-                    and transformation stories to help you get fit and stay fit!</p>
-                <div class="banner-button display-flex">
-                    <button class="btn-primary">Join Club Now!</button>
-                    <button class="btn-download">Download App</button>
+        <section class="header-content">
+            <nav class="navbar display-flex">
+                <h3 class="fitness reddish">Fitness</h3>
+                <ul class="nav-links display-flex">
+                    <li class="nav-item"><a class="nav-link common-white" href=""><button class="btn-nav">Home</button></a></li>
+                    <li class="nav-item"><a class="nav-link common-white" href="">Service</a></li>
+                    <li class="nav-item"><a class="nav-link common-white" href="">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link common-white" href="">About</a></li>
+                </ul>
+            </nav>
+            <div class="banner display-flex">
+                <div class="banner-content">
+                    <h1 class="heading common-white">Get body in <span>shape</span> & stay 
+                        healthy</h1>
+                    <p>A huge selection of health and fitness content, healthy recipes 
+                        and transformation stories to help you get fit and stay fit!</p>
+                    <div class="banner-button display-flex">
+                        <button class="btn-primary">Join Club Now!</button>
+                        <button class="btn-download">Download App</button>
+                    </div>
                 </div>
+                <img src="images/Images 2.png" alt="">
             </div>
-            <img src="images/Images 2.png" alt="">
-        </div>
+        </section>
     </header>
     <main>
         <section class="changes">
@@ -64,6 +66,32 @@
                     <p>We believe fitness should be 
                         accessible to everyone</p>
                 </div>
+            </div>
+        </section>
+        <section class="run-extra">
+            <div class="text-cont">
+                <h2>Run an Extra Mile Easily</h2>
+                <p>We believe fitness should be accessible to everyone, 
+                    everywhere, regardless of income or access to a gym. With 
+                    hundreds of professional workouts</p>
+                <button class="run-button btn-primary">Join Now</button>
+            </div>
+            <img src="images/run1.jpg" alt="">
+            </div>
+        </section>
+        <section class="meet-team">
+            <div class="meet-text">
+                <h2 class="common-white">Meet Our Team</h2>
+                <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or <br>
+                    access to a gym.</p>
+            </div>
+            <div class="meet-img">
+                <img src="images/trainer1.png" alt="">
+                <img src="images/trainer2.png" alt="">
+                <img src="images/trainer3.png" alt="">
+                <img src="images/trainer4.png" alt="">
+                <img src="images/trainer5.png" alt="">
+                <img src="images/trainer6.png" alt="">
             </div>
         </section>
     </main>
