--- a/index.html
+++ b/index.html
@@ -96,7 +96,28 @@
         </section>
     </main>
     <footer>
-
+        <section class="footer">
+            <div class="fitness-part">
+                <h2 class="fitness reddish">Fitness</h2>
+                <p>We believe fitness should be accessible to everyone, 
+                    everywhere, regardless of income or access to a gym. With 
+                    hundreds of professional workouts.</p>
+            </div>
+            <div>
+                <h3>Get Started</h3>
+                <p>Service</p>
+                <p>Contact Us</p>
+                <p>Affiliate Program</p>
+                <p>About Us</p>
+            </div>
+            <div>
+                <h3>Get Started</h3>
+                <p>Fitness</p>
+                <p>Platform</p>
+                <p>Workout Libary</p>
+                <p>App Design</p>
+            </div>
+        </section>
     </footer>
 </body>
 </html>
