made navbar responsive

--- a/index.html
+++ b/index.html
@@ -5,18 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-02</title>
     <link rel="stylesheet" href="styles/design.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
 </head>
 <body class="inter-font">
     <header class="header">
         <section class="header-content">
             <nav class="navbar display-flex">
                 <h3 class="fitness reddish">Fitness</h3>
-                <ul class="nav-links display-flex">
-                    <li class="nav-item"><a class="nav-link common-white" href=""><button class="btn-nav">Home</button></a></li>
-                    <li class="nav-item"><a class="nav-link common-white" href="">Service</a></li>
-                    <li class="nav-item"><a class="nav-link common-white" href="">Contact</a></li>
-                    <li class="nav-item"><a class="nav-link common-white" href="">About</a></li>
-                </ul>
+                <div class="nav-bar display-flex">
+                    <div class="hamburger-menu">
+                        <i class="fa-solid fa-bars"></i>
+                    </div>
+                    <ul class="nav-links display-flex">
+                        <li class="nav-item"><a class="nav-link common-white" href=""><button class="btn-nav">Home</button></a></li>
+                        <li class="nav-item"><a class="nav-link common-white" href="">Service</a></li>
+                        <li class="nav-item"><a class="nav-link common-white" href="">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link common-white" href="">About</a></li>
+                    </ul>
+                </div>
             </nav>
             <div class="banner display-flex">
                 <div class="banner-content">
